[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Assets/Images/Experimental/Red.png" type="Texture" id=1]
[ext_resource path="res://Game/Scripts/Main/HUDElements/CardDisplay.gd" type="Script" id=2]

[node name="CardDisplay" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_left = 4.0
margin_top = 3.0
margin_right = 286.0
margin_bottom = 345.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_left = 31.0
margin_top = 8.0
margin_right = 260.0
margin_bottom = 41.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Picture" type="Sprite" parent="."]
position = Vector2( 8.00644, 0.531479 )

[node name="Red" type="Sprite" parent="Picture"]
position = Vector2( 139.492, 85.5453 )
scale = Vector2( 1.14952, 0.633786 )
texture = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 29.0
margin_top = 148.0
margin_right = 260.0
margin_bottom = 316.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionOrEffect" type="Label" parent="ScrollContainer"]
margin_right = 220.0
margin_bottom = 150.0
rect_min_size = Vector2( 220, 150 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HideButton" type="Button" parent="."]
margin_left = 242.324
margin_top = 0.8909
margin_right = 283.324
margin_bottom = 32.8909
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HideButton" to="." method="_on_HideButton_pressed"]
